Added Add-Comments Button (without functionality)

--- a/poc/poc/src/main/resources/static/css/style.css
+++ b/poc/poc/src/main/resources/static/css/style.css
@@ -10806,5 +10806,7 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
   margin-left: 12px;
 }
 
-
-
+/* Add Comments Button */
+#addCommentsButton {
+  font-size: 10px;
+}
