Added showing userFirstName in the comments box, with some controller modifications for getting userdetails via email

--- a/poc/poc/src/main/resources/static/css/style.css
+++ b/poc/poc/src/main/resources/static/css/style.css
@@ -10816,8 +10816,21 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
   font-size: 12px;
 }
 
-/* User Comment Picture */
+#showCommentsButton {
+  font-size: 12px;
+}
+
+/* User Comment */
 
 .gm-style img {
   width: 80px;
+}
+
+.gm-style ul {
+  margin-left: -30px;
+}
+
+.gm-style a {
+  font-style: italic;
+  font-weight: bold;
 }
