Read More functionality

--- a/poc/poc/src/main/resources/static/css/style.css
+++ b/poc/poc/src/main/resources/static/css/style.css
@@ -10834,3 +10834,9 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
   font-style: italic;
   font-weight: bold;
 }
+
+/* Read more */
+
+#more {
+  display: none;
+}
