--- a/poc/poc/src/main/resources/static/css/style.css
+++ b/poc/poc/src/main/resources/static/css/style.css
@@ -10802,6 +10802,9 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
   height:80px;
   width:250px;
   font-size:10pt;
+  margin-top:3px;
+  float:left;
+  margin-right: 8px;
 }
 
 /* Upload Image Button */
@@ -10824,6 +10827,8 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
 
 .gm-style img {
   width: 80px;
+  /*float: left;*/
+  /*padding-right: 8px;*/
 }
 
 .gm-style ul {
@@ -10833,10 +10838,35 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
 .gm-style a {
   font-style: italic;
   font-weight: bold;
+  background-color: lightblue;
 }
 
 /* Read more */
 
 #more {
   display: none;
+}
+
+/* Read More Button */
+
+#readMoreButton {
+  background-color: rgba(51, 51, 51, 0.05);
+  border-radius: 8px;
+  border-width: 0;
+  color: #333333;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 10px;
+  font-weight: 500;
+  line-height: 20px;
+  list-style: none;
+  margin: 0;
+  text-align: center;
+  transition: all 200ms;
+  vertical-align: baseline;
+  white-space: nowrap;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
 }
