--- a/poc/poc/src/main/resources/templates/dashboard.html
+++ b/poc/poc/src/main/resources/templates/dashboard.html
@@ -17,7 +17,8 @@
     <div class="border-end bg-white" id="sidebar-wrapper">
         <div class="sidebar-heading border-bottom bg-light">Poc</div>
         <div class="list-group list-group-flush">
-            <!-- <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/dashboard">Dashboard</a> -->
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/dashboard">Dashboard</a>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" href="/viewComments">View Comments</a>
             <div>
                 <input type="text" id="myInput" onkeyup="searchUserNames()" placeholder="Search">
                 <button id="sortButton" class="btn btn-primary" onclick="sortUserNames()">Sort</button>
