Added Comments table

--- a/poc/poc/src/main/resources/static/css/style.css
+++ b/poc/poc/src/main/resources/static/css/style.css
@@ -10870,3 +10870,21 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
   -webkit-user-select: none;
   touch-action: manipulation;
 }
+
+/* View Comments Table */
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+.container-fluid {
+  margin-top: 10px;
+}
