--- a/poc/poc/src/main/resources/static/css/style.css
+++ b/poc/poc/src/main/resources/static/css/style.css
@@ -4768,6 +4768,7 @@ textarea.form-control-lg {
 .list-group-item-light {
   color: #636464;
   background-color: #fefefe;
+  border-radius: 15px;
 }
 .list-group-item-light.list-group-item-action:hover, .list-group-item-light.list-group-item-action:focus {
   color: #636464;
@@ -10875,7 +10876,8 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
 
 table {
   font-family: arial, sans-serif;
-  border-collapse: collapse;
+  border-collapse: separate;
+  border-spacing: 0 0.3em;
   width: 100%;
 }
 
@@ -10883,8 +10885,24 @@ td, th {
   border: 1px solid #dddddd;
   text-align: left;
   padding: 8px;
+  border-radius: 15px;
 }
 
 .container-fluid {
   margin-top: 10px;
+}
+
+td:nth-child(2):hover {
+  background-color: #e0dee0;
+}
+
+td:nth-child(1){
+  font-style: italic;
+  background-color: #99ffcc;
+}
+
+th {
+  background-color: #66ffb3;
+  border-radius: 15px;
+  font-weight: normal;
 }
