Modified and added an extra sort button (without functionality)

--- a/poc/poc/src/main/resources/static/css/style.css
+++ b/poc/poc/src/main/resources/static/css/style.css
@@ -10792,9 +10792,11 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
 }
 
 /* Sort Button */
-#sortButton {
+#sortButton, #sortActiveStatusButton {
   margin-bottom: 12px;
   margin-left: 12px;
+  font-size: 10px;
+  display: inline-block;
 }
 
 /* Comment Text Box */
