Working on logic for active and inactive user sort

--- a/poc/poc/src/main/resources/templates/dashboard.html
+++ b/poc/poc/src/main/resources/templates/dashboard.html
@@ -48,6 +48,8 @@
             </div>
         </nav>
         <script>
+            const activeUsers = "[[${activeUsersFirstName}]]";
+            const inactiveUsers = "[[${inactiveUsersFirstName}]]";
             const message = "[[${usersLocation}]]";
         </script>
         <!-- Page content-->
