--- a/poc/poc/src/main/resources/templates/viewComments.html
+++ b/poc/poc/src/main/resources/templates/viewComments.html
@@ -23,14 +23,16 @@
                 <input type="text" id="myInput" onkeyup="searchUserNames()" placeholder="Search">
                 <button id="sortButton" class="btn btn-primary" onclick="sortUserNamesAsc()">Asc<br>&nbsp&nbspDesc&nbsp&nbsp</button>
                 <button id="sortActiveStatusButton" class="btn btn-primary" onclick="sortActiveInactive()">Active<br>Inactive</button>
-                <ul id="myUL">
-                    <li id="myActive" th:each="activeUserFirstName : ${activeUsersFirstName}">
-                        <a href="#" th:text="${activeUserFirstName}"></a>
-                    </li>
-                    <li id="myInactive" th:each="inactiveUserFirstName : ${inactiveUsersFirstName}">
-                        <a href="#" th:text="${inactiveUserFirstName}"></a>
-                    </li>
-                </ul>
+                <div class="ScrollStyle">
+                    <ul id="myUL">
+                        <li id="myActive" th:each="activeUserFirstName : ${activeUsersFirstName}">
+                            <a href="#" th:text="${activeUserFirstName}"></a>
+                        </li>
+                        <li id="myInactive" th:each="inactiveUserFirstName : ${inactiveUsersFirstName}">
+                            <a href="#" th:text="${inactiveUserFirstName}"></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
